# stylizer.api

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  api.cpp  api.cppm  api.h  api.hpp  c_view.h  config.h  current_backend.hpp  current_platform.hpp  glfw.cppm  glfw.hpp  optional.h  sdl3.cppm  sdl3.hpp  span_from_value.hpp  spans.hpp  test.c  test.cpp  texture_format.h  texture_format.partial  texture_format.partial.h
C/: stylizer.cpp  stylizer.h
backends/: CMakeLists.txt  current_backend.cppm  current_backend.hpp
backends/stub/: CMakeLists.txt  bind_group.cppm  buffer.cppm  command_buffer.cppm  command_encoder.cppm  command_encoder_base.cppm  compute_pipeline.cppm  device.cppm  render_pass.cppm  render_pipeline.cppm  shader.cppm  stub.cppm  stub.hpp  surface.cppm  texture.cppm  texture_view.cppm
backends/webgpu/: CMakeLists.txt  bind_group.cpp  bind_group.cppm  buffer.cpp  buffer.cppm  command_buffer.cpp  command_buffer.cppm  command_encoder.cpp  command_encoder.cppm  command_encoder_base.cppm  common.cppm  common.hpp  compute_pipeline.cpp  compute_pipeline.cppm  device.cpp  device.cppm  device.create.cpp  render_pass.cpp  render_pass.cppm  render_pipeline.cpp  render_pipeline.cppm  shader.cpp  shader.cppm  surface.cpp  surface.cppm  texture.cpp  texture.cppm  texture_view.cppm  webgpu.cppm  webgpu.hpp
backends/webgpu/cmake/: FetchDawn.cmake
backends/webgpu/patch/: type_matchers.h  vk_struct_helper.hpp
cmake/: glfw.cmake  sdl3.cmake  surface_support.cmake
util/: auto_release.cppm  auto_release.hpp  config.hpp  convertible_to_pointer.cppm  convertible_to_pointer.hpp  defer.hpp  error_macros.hpp  errors.cppm  flags.cppm  flags.hpp  method_macros.hpp  spans.cppm  spans.hpp  string2magic.cppm  string2magic.hpp
webgpu/: CMakeLists.txt  all.hpp  bind_group.hpp  buffer.hpp  c.h  command_buffer.hpp  command_encoder.hpp  common.hpp  compute_pipeline.hpp  device.cpp  device.hpp  graphics_pipeline.hpp  render_pass.cpp  render_pass.hpp  render_pipeline.hpp  shader.hpp  surface.hpp  texture.cpp  texture.hpp  texture_view.cpp  texture_view.hpp
wgpu/: common.hpp  device.hpp
